# cfc

./: .gitignore  BUILD.gn  package-lock.json  package.json
android/: BUILD.gn  brave_java_sources.gni
app/: brave_settings_strings.grdp  brave_strings.grd  generated_resources.grd  generated_resources_override.grd  os_settings_strings.grdp  settings_strings.grdp
browser/: about_flags.cc  brave_browser_main_extra_parts.cc  brave_browser_process.h  brave_browser_process_impl.cc  brave_browser_process_impl.h  brave_content_browser_client.cc  brave_local_state_prefs.cc  brave_profile_prefs.cc  brave_tab_helpers.cc  browser_context_keyed_service_factories.cc  sources.gni
components/chat_ui/browser/: BUILD.gn  chat_ui_api_request.cc  chat_ui_api_request.h
components/chat_ui/resources/page/: BUILD.gn  chat_ui.html  chat_ui.tsx
components/chat_ui/resources/page/api/: page_handler.ts
components/chat_ui/resources/page/components/conversation-list/: index.tsx  style.module.scss
components/chat_ui/resources/page/components/input-box/: index.tsx  style.module.scss
components/chat_ui/resources/page/components/main/: index.tsx  style.module.scss
components/chat_ui/resources/page/components/main-panel/: index.tsx
components/chat_ui/resources/page/state/: hooks.ts
components/chat_ui/resources/page/stories/: components-panel.tsx
components/request_otr/browser/: BUILD.gn  request_otr_component_installer.cc  request_otr_component_installer.h  request_otr_controller_client.cc  request_otr_controller_client.h  request_otr_navigation_throttle.cc  request_otr_navigation_throttle.h  request_otr_page.cc  request_otr_page.h  request_otr_rule.cc  request_otr_rule.h  request_otr_service.cc  request_otr_service.h  request_otr_tab_storage.cc  request_otr_tab_storage.h
patches/: base-BUILD.gn.patch  base-threading-thread_restrictions.h.patch  build-config-android-internal_rules.gni.patch  build-config-android-rules.gni.patch  chrome-BUILD.gn.patch  chrome-VERSION.patch  chrome-android-chrome_java_sources.gni.patch  chrome-android-expectations-lint-suppressions.xml.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-browser_process_impl.h.patch  chrome-browser-resources-settings-BUILD.gn.patch  chrome-browser-resources-settings-site_settings-constants.ts.patch  chrome-browser-sync-sync_service_factory.cc.patch  chrome-browser-ui-BUILD.gn.patch  chrome-browser-ui-views-bookmarks-bookmark_bubble_view.cc.patch  chrome-browser-ui-views-side_panel-side_panel_coordinator.cc.patch  chrome-browser-ui-views-tabs-tab_strip.cc.patch  chrome-browser-ui-webui-chrome_web_ui_controller_factory.cc.patch  chrome-browser-ui-webui-settings-settings_localized_strings_provider.cc.patch  chrome-common-BUILD.gn.patch  chrome-test-BUILD.gn.patch  components-bookmarks-browser-bookmark_model.h.patch  components-content_settings-core-browser-content_settings_policy_provider.cc.patch  components-content_settings-core-common-content_settings_types.h.patch  components-omnibox-browser-autocomplete_controller.cc.patch  components-sync-protocol-proto_visitors.h.patch  content-browser-renderer_host-navigation_request.cc.patch  ios-chrome-app-BUILD.gn.patch  (+2 more)
(+330 files in other folders)
