import("//brave/build/config.gni")

source_set("browser") {
  sources = [
    "request_otr_component_installer.cc",
    "request_otr_component_installer.h",
    "request_otr_controller_client.cc",
    "request_otr_controller_client.h",
    "request_otr_navigation_throttle.cc",
    "request_otr_navigation_throttle.h",
    "request_otr_page.cc",
    "request_otr_page.h",
    "request_otr_rule.cc",
    "request_otr_rule.h",
    "request_otr_service.cc",
    "request_otr_service.h",
    "request_otr_tab_storage.cc",
    "request_otr_tab_storage.h",
  ]

  deps = [
    "//base",
    "//brave/components/brave_component_updater/browser",
    "//brave/components/brave_shields/browser:browser",
    "//brave/components/l10n/common:common",
    "//brave/components/request_otr/common:common",
    "//brave/components/resources:static_resources_grit",
    "//brave/components/resources:strings_grit",
    "//brave/extensions:common",
    "//components/prefs:prefs",
    "//components/security_interstitials/content:security_interstitial_page",
    "//components/security_interstitials/core:core",
    "//components/user_prefs:user_prefs",
    "//content/public/browser",
    "//extensions/browser:browser_sources",
    "//ui/base",
    "//url",
  ]
}
